--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/2f2894d49f.js"></script>
+    <title>City Tours</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
